syntax = "proto3";

package shop;

option java_package = "io.kuz.ecom.proto.shop";
option java_multiple_files = true;

message CartItem {
  int64 productId = 1;
  int64 quantity = 2;
}